--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = 'microservices-spring-cloud-demo'
 
-include 'product-service'
-include 'product-composite-service'
-include 'recommendation-service'
-include 'review-service'
+include ':microservices:product-service'
+include ':microservices:product-composite-service'
+include ':microservices:recommendation-service'
+include ':microservices:review-service'
 
