--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,6 @@ include ':microservices:product-service'
 include ':microservices:product-composite-service'
 include ':microservices:recommendation-service'
 include ':microservices:review-service'
+include 'api'
+include 'util'
 
