--- a/microservices/product-service/build.gradle
+++ b/microservices/product-service/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.3'
 }
 
-group = 'demo.ignat'
+group = 'demo.ignat.microservices.core.product'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -15,13 +15,19 @@ repositories {
 	mavenCentral()
 }
 
+jar {
+	enabled = false
+}
+
 dependencies {
+	implementation project(':api')
+	implementation project(':util')
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
 }
