--- a/util/build.gradle
+++ b/util/build.gradle
@@ -3,8 +3,8 @@ plugins {
     id 'java'
 }
 
-group = 'demo.ignat'
-version = 'unspecified'
+group = 'demo.ignat.microservices.util'
+version = '0.0.1-SNAPSHOT'
 
 java {
     sourceCompatibility = '17'
@@ -20,12 +20,13 @@ ext {
 
 dependencies {
     implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
+
+    implementation project(':api')
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation project(path: ':api')
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-tasks.named('test') {
+test {
     useJUnitPlatform()
 }
